--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Capactity Node Autorouter</title>
+    <title>Capacity Node Autorouter</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
