--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         width: 100%;
         height: 100%;
       }
+      polyline {
+        fill: none;
+      }
     </style>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
